# auth/src/controllers/auth.controller.ts
@@ -7,8 +7,6 @@ import {
   SuccessResponse,
   Query,
   Get,
-  Request,
-  Response,
 } from "tsoa";
 import validateInput from "../middlewares/validate-input";
 import { IUser } from "../database/models/user.model";
@@ -16,8 +14,7 @@ import { UserSignInSchema, UserSignUpSchema } from "../schema";
 import { StatusCode } from "../utils/consts";
 import { ROUTE_PATHS } from "../routes/v1/route-defs";
 import { generateSignature } from "../utils/jwt";
-import passport from "passport";
-import APIError from "../errors/api-error";
+import axios from "axios";
 
 interface SignUpRequestBody {
   username: string;
@@ -93,18 +90,74 @@ export class AuthController {
   }
 
   @SuccessResponse(StatusCode.OK, "OK")
-  @Post(ROUTE_PATHS.AUTH.GOOGLE)
+  @Get(ROUTE_PATHS.AUTH.GOOGLE)
   public async GoogleAuth() {
-    passport.authenticate("google", { scope: ["email"] });
+    const url = `https://accounts.google.com/o/oauth2/v2/auth?client_id=${process.env.CLIENT_ID}&redirect_uri=${process.env.REDIRECT_URI}&response_type=code&scope=profile email`;
+    return { url };
   }
 
   @SuccessResponse(StatusCode.OK, "OK")
-  @Post(ROUTE_PATHS.AUTH.GOOGLE_CALLBACK)
-  public async GoogleAuthCallback() {
-    passport.authenticate("google", (err: unknown, user: any) => {
-      if (err || !user) {
-        throw new APIError("Authentication Failed", StatusCode.BadRequest);
+  @Get(ROUTE_PATHS.AUTH.GOOGLE_CALLBACK)
+  public async GoogleAuthCallback(@Query() code: string) {
+    try {
+      // Exchange the code for tokens
+      const { data } = await axios.post("https://oauth2.googleapis.com/token", {
+        clientId: process.env.CLIENT_ID,
+        client_secret: process.env.CLIENT_SECRET,
+        code,
+        redirect_uri: process.env.REDIRECT_URI,
+        grant_type: "authorization_code",
+      });
+
+      // Fetch user profile
+      const profile = await axios.get(
+        "https://www.googleapis.com/oauth2/v1/userinfo",
+        {
+          headers: { Authorization: `Bearer ${data.access_token}` },
+        }
+      );
+
+      const userService = new UserService();
+      const existingUser = await userService.FindUserByEmail({
+        email: profile.data.email,
+      });
+
+      if (existingUser) {
+        // User Exists, link the Google account if it's not already linked
+        if (!existingUser.googleId) {
+          await userService.UpdateUser({
+            id: existingUser._id,
+            updates: { googleId: profile.data.id },
+          });
+        }
+
+        // Now, proceed to log the user in
+        const jwtToken = await generateSignature({
+          userId: existingUser._id,
+        });
+
+        return {
+          token: jwtToken,
+        };
       }
-    });
+
+      // No user exists with this email, create a new user
+      const newUser = await userService.SignUp({
+        username: profile.data.name,
+        email: profile.data.email,
+        isVerified: true,
+        googleId: profile.data.id,
+      });
+
+      const jwtToken = await generateSignature({
+        userId: newUser._id,
+      });
+
+      return {
+        token: jwtToken,
+      };
+    } catch (error) {
+      throw error;
+    }
   }
 }
